brain/sources/prod-metadata/objects/Account/fields/Account_Manager__c.field-meta.xml
<CustomField>
    <fullName>Account_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Techsara Account Manager responsible for managing this client relationship. Auto-populates on Job Requirements created under this account.</description>
    <inlineHelpText>Select the Account Manager who owns this client relationship. This person will be defaulted on all Job Requirements created for this client.</inlineHelpText>
    <label>Account Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>