brain/sources/prod-metadata/objects/Account/fields/Acknowledgement_Declaration__c.field-meta.xml
<CustomField>
    <fullName>Acknowledgement_Declaration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Acknowledgement Declaration</label>
    <type>Checkbox</type>
</CustomField>