brain/sources/prod-metadata/objects/Account/fields/Acquaintances_Using_Our_Services__c.field-meta.xml
<CustomField>
    <fullName>Acquaintances_Using_Our_Services__c</fullName>
    <label>Acquaintances Using Our Services</label>
    <length>100</length>
    <type>Text</type>
</CustomField>