brain/sources/prod-metadata/objects/Account/fields/Active_CPT__c.field-meta.xml
<CustomField>
    <fullName>Active_CPT__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active CPT?</label>
    <type>Checkbox</type>
</CustomField>