brain/sources/prod-metadata/objects/Account/fields/Assigned_Marketing_Team_Lead__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Marketing_Team_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned Marketing Team Lead</label>
    <referenceTo>Recruiter__c</referenceTo>
    <relationshipLabel>Accounts (Assigned Marketing Team Lead)</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>