brain/sources/prod-metadata/objects/Account/fields/Assigned_Recruiter__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Recruiter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned Recruiter</label>
    <referenceTo>Recruiter__c</referenceTo>
    <relationshipLabel>Candidates</relationshipLabel>
    <relationshipName>Candidates</relationshipName>
    <type>Lookup</type>
</CustomField>