brain/sources/prod-metadata/objects/Account/fields/Candidate_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Owner_Name__c</fullName>
    <formula>Owner.FirstName &amp; &quot; &quot; &amp;  Owner.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Candidate Owner Name</label>
    <type>Text</type>
</CustomField>