brain/sources/prod-metadata/objects/Account/fields/Candidate_Referral__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Referral__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Candidate Referral</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>CandidatesParent</relationshipName>
    <type>Lookup</type>
</CustomField>