brain/sources/prod-metadata/objects/Account/fields/Candidate_Status_Change_Reason__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Status_Change_Reason__c</fullName>
    <label>Candidate Status Change Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>