brain/sources/prod-metadata/objects/Account/fields/Client_Status__c.field-meta.xml
<CustomField>
    <fullName>Client_Status__c</fullName>
    <description>Current relationship status with this B2B client or vendor. Active means requirements are being received regularly.</description>
    <inlineHelpText>Set to Active when client is sending requirements. On Hold when temporarily paused. Inactive when no longer working. Prospect for new unqualified clients.</inlineHelpText>
    <label>Client Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prospect</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>