brain/sources/prod-metadata/objects/Account/fields/Client_Type__c.field-meta.xml
<CustomField>
    <fullName>Client_Type__c</fullName>
    <description>Categorizes the type of B2B relationship. Direct Client hires directly. Vendor and MSP are middle-layer staffing companies.</description>
    <inlineHelpText>Direct Client = Company hiring directly
Vendor = Staffing vendor
Implementation Partner = Tech implementation company
MSP = Managed Service Provider.</inlineHelpText>
    <label>Client Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Direct Client</fullName>
            </value>
            <value>
                <fullName>Vendor</fullName>
            </value>
            <value>
                <fullName>Implementation Partner</fullName>
            </value>
            <value>
                <fullName>MSP</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>