brain/sources/prod-metadata/objects/Account/fields/College_Name_2__c.field-meta.xml
<CustomField>
    <fullName>College_Name_2__c</fullName>
    <label>College Name 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>