brain/sources/prod-metadata/objects/Account/fields/College_Name_3__c.field-meta.xml
<CustomField>
    <fullName>College_Name_3__c</fullName>
    <label>College Name 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>