brain/sources/prod-metadata/objects/Account/fields/Communication_Skills_Rating__c.field-meta.xml
<CustomField>
    <fullName>Communication_Skills_Rating__c</fullName>
    <label>Communication Skills Rating</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>