brain/sources/prod-metadata/objects/Account/fields/Complete_Address__c.field-meta.xml
<CustomField>
    <fullName>Complete_Address__c</fullName>
    <formula>TRIM(
    BLANKVALUE(Current_Address__Street__s, &quot;&quot;) &amp;
    IF(ISBLANK(Current_Address__Street__s), &quot;&quot;, &quot;, &quot;) &amp;

    BLANKVALUE(Current_Address__City__s, &quot;&quot;) &amp;
    IF(ISBLANK(Current_Address__City__s), &quot;&quot;, &quot;, &quot;) &amp;

    TEXT(Current_Address__StateCode__s) &amp;
    IF(
        AND(
            NOT(ISBLANK(TEXT(Current_Address__StateCode__s))),
            NOT(ISBLANK(Current_Address__PostalCode__s))
        ),
        &quot; &quot;,
        &quot;&quot;
    ) &amp;

    BLANKVALUE(Current_Address__PostalCode__s, &quot;&quot;)
)</formula>
    <label>Complete Address</label>
    <type>Text</type>
</CustomField>