brain/sources/prod-metadata/objects/Account/fields/Confidential_Client__c.field-meta.xml
<CustomField>
    <fullName>Confidential_Client__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, client name will be hidden from Techsara website job listings and from users without authorized access.</description>
    <inlineHelpText>Check if the client has requested confidentiality. When checked, client name will NOT appear on website job postings regardless of other settings.</inlineHelpText>
    <label>Confidential Client</label>
    <type>Checkbox</type>
</CustomField>