brain/sources/prod-metadata/objects/Account/fields/Contact_Number_Calling__c.field-meta.xml
<CustomField>
    <fullName>Contact_Number_Calling__c</fullName>
    <label>Contact Number Calling</label>
    <type>Phone</type>
</CustomField>