brain/sources/prod-metadata/objects/Account/fields/Current_Job_Position__c.field-meta.xml
<CustomField>
    <fullName>Current_Job_Position__c</fullName>
    <label>Current Job Position</label>
    <length>255</length>
    <type>Text</type>
</CustomField>