brain/sources/prod-metadata/objects/Account/fields/Current_Rate_Expectation__c.field-meta.xml
<CustomField>
    <fullName>Current_Rate_Expectation__c</fullName>
    <description>Candidate current expected hourly or salary rate. Updated regularly as candidate expectations change. Used as default in submissions.</description>
    <inlineHelpText>Enter the candidate current rate expectation. For contractors enter hourly rate. For full-time enter annual salary. Update whenever expectations change.</inlineHelpText>
    <label>Current Rate Expectation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>