brain/sources/prod-metadata/objects/Account/fields/Current_Visa_Status__c.field-meta.xml
<CustomField>
    <fullName>Current_Visa_Status__c</fullName>
    <label>Current Visa Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CPT</fullName>
            </value>
            <value>
                <fullName>OPT</fullName>
            </value>
            <value>
                <fullName>STEM OPT Extension</fullName>
            </value>
            <value>
                <fullName>H1B</fullName>
            </value>
            <value>
                <fullName>B2</fullName>
            </value>
            <value>
                <fullName>Green Card EAD</fullName>
            </value>
            <value>
                <fullName>Green Card / Permanent Resident</fullName>
            </value>
            <value>
                <fullName>US Citizen</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>