brain/sources/prod-metadata/objects/Account/fields/Currently_Employed__c.field-meta.xml
<CustomField>
    <fullName>Currently_Employed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Currently Employed</label>
    <type>Checkbox</type>
</CustomField>