brain/sources/prod-metadata/objects/Account/fields/Date_of_Arrival__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Arrival__c</fullName>
    <label>Date of Arrival</label>
    <type>Date</type>
</CustomField>