brain/sources/prod-metadata/objects/Account/fields/Day_to_day_availability_for_interviews__c.field-meta.xml
<CustomField>
    <fullName>Day_to_day_availability_for_interviews__c</fullName>
    <label>Day to day availability for interviews</label>
    <length>255</length>
    <type>Text</type>
</CustomField>