brain/sources/prod-metadata/objects/Account/fields/Days_since_application_started__c.field-meta.xml
<CustomField>
    <fullName>Days_since_application_started__c</fullName>
    <formula>today() - Application_Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days since application started</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>