brain/sources/prod-metadata/objects/Account/fields/Default_Submission_Email__c.field-meta.xml
<CustomField>
    <fullName>Default_Submission_Email__c</fullName>
    <description>The default email address used by the Account Manager when submitting candidate profiles to this client.</description>
    <inlineHelpText>Enter the primary email for sending candidate submissions to this client. Typically the hiring manager or vendor coordinator email.</inlineHelpText>
    <label>Default Submission Email</label>
    <type>Email</type>
</CustomField>