brain/sources/prod-metadata/objects/Account/fields/Default_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Default_Vendor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Default Vendor</label>
    <referenceTo>Vendor__c</referenceTo>
    <relationshipName>CandidateVendor</relationshipName>
    <type>Lookup</type>
</CustomField>