brain/sources/prod-metadata/objects/Account/fields/Degree_End_Date_4__c.field-meta.xml
<CustomField>
    <fullName>Degree_End_Date_4__c</fullName>
    <label>Degree End Date 4</label>
    <type>Date</type>
</CustomField>