brain/sources/prod-metadata/objects/Account/fields/Degree_Start_Date_2__c.field-meta.xml
<CustomField>
    <fullName>Degree_Start_Date_2__c</fullName>
    <label>Degree Start Date 2</label>
    <type>Date</type>
</CustomField>