brain/sources/prod-metadata/objects/Account/fields/Degree_Start_Date_3__c.field-meta.xml
<CustomField>
    <fullName>Degree_Start_Date_3__c</fullName>
    <label>Degree Start Date 3</label>
    <type>Date</type>
</CustomField>