brain/sources/prod-metadata/objects/Account/fields/Degree_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Degree_Start_Date__c</fullName>
    <label>Degree Start Date</label>
    <type>Date</type>
</CustomField>