brain/sources/prod-metadata/objects/Account/fields/Disability_Status__c.field-meta.xml
<CustomField>
    <fullName>Disability_Status__c</fullName>
    <label>Disability Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes, I have a disability or previously had a disability</fullName>
            </value>
            <value>
                <fullName>No, I do not have a disability</fullName>
            </value>
            <value>
                <fullName>Prefer not to say</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>