brain/sources/prod-metadata/objects/Account/fields/DS_Account_Type__c.field-meta.xml
<CustomField>
    <fullName>DS_Account_Type__c</fullName>
    <label>DS Account Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Checking</fullName>
            </value>
            <value>
                <fullName>Savings</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>