brain/sources/prod-metadata/objects/Account/fields/DS_ACH_Identification_Number__c.field-meta.xml
<CustomField>
    <fullName>DS_ACH_Identification_Number__c</fullName>
    <label>DS ACH Identification Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>