brain/sources/prod-metadata/objects/Account/fields/DS_ACH_Issuing_Authority__c.field-meta.xml
<CustomField>
    <fullName>DS_ACH_Issuing_Authority__c</fullName>
    <label>DS ACH Issuing Authority</label>
    <length>200</length>
    <type>Text</type>
</CustomField>