brain/sources/prod-metadata/objects/Account/fields/DS_Address_Line_1__c.field-meta.xml
<CustomField>
    <fullName>DS_Address_Line_1__c</fullName>
    <label>DS Address Line 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>