brain/sources/prod-metadata/objects/Account/fields/DS_Address_Line_2__c.field-meta.xml
<CustomField>
    <fullName>DS_Address_Line_2__c</fullName>
    <label>DS Address Line 2</label>
    <length>50</length>
    <type>Text</type>
</CustomField>