brain/sources/prod-metadata/objects/Account/fields/DS_Bank_Name__c.field-meta.xml
<CustomField>
    <fullName>DS_Bank_Name__c</fullName>
    <label>DS Bank Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>