brain/sources/prod-metadata/objects/Account/fields/DS_City__c.field-meta.xml
<CustomField>
    <fullName>DS_City__c</fullName>
    <label>DS City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>