brain/sources/prod-metadata/objects/Account/fields/DS_Date_Of_Birth__c.field-meta.xml
<CustomField>
    <fullName>DS_Date_Of_Birth__c</fullName>
    <label>DS Date Of Birth</label>
    <type>Date</type>
</CustomField>