brain/sources/prod-metadata/objects/Account/fields/DS_First_Name__c.field-meta.xml
<CustomField>
    <fullName>DS_First_Name__c</fullName>
    <label>DS First Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>