brain/sources/prod-metadata/objects/Account/fields/DS_Middle_Name__c.field-meta.xml
<CustomField>
    <fullName>DS_Middle_Name__c</fullName>
    <label>DS Middle Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>