brain/sources/prod-metadata/objects/Account/fields/DS_Person_Email__c.field-meta.xml
<CustomField>
    <fullName>DS_Person_Email__c</fullName>
    <label>DS Person Email</label>
    <type>Email</type>
</CustomField>