brain/sources/prod-metadata/objects/Account/fields/DS_Person_Phone__c.field-meta.xml
<CustomField>
    <fullName>DS_Person_Phone__c</fullName>
    <label>DS Person Phone</label>
    <type>Phone</type>
</CustomField>