brain/sources/prod-metadata/objects/Account/fields/DS_Service_Identification_Number__c.field-meta.xml
<CustomField>
    <fullName>DS_Service_Identification_Number__c</fullName>
    <label>DS Service Identification Number</label>
    <length>200</length>
    <type>Text</type>
</CustomField>