brain/sources/prod-metadata/objects/Account/fields/DS_Service_Identification_Type__c.field-meta.xml
<CustomField>
    <fullName>DS_Service_Identification_Type__c</fullName>
    <label>DS Service Identification Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Passport</fullName>
            </value>
            <value>
                <fullName>Driver&apos;s License</fullName>
            </value>
            <value>
                <fullName>State Id</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>