brain/sources/prod-metadata/objects/Account/fields/DS_State_Province__c.field-meta.xml
<CustomField>
    <fullName>DS_State_Province__c</fullName>
    <label>DS State/Province</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>State</valueSetName>
    </valueSet>
</CustomField>