brain/sources/prod-metadata/objects/Account/fields/DS_Today_Date__c.field-meta.xml
<CustomField>
    <fullName>DS_Today_Date__c</fullName>
    <formula>RIGHT(&quot;0&quot;&amp;TEXT(MONTH(TODAY())),2)&amp;&quot;/&quot;&amp;RIGHT(&quot;0&quot;&amp;TEXT(DAY(TODAY())),2)&amp;&quot;/&quot;&amp;TEXT(YEAR(TODAY()))</formula>
    <label>DS Today Date</label>
    <type>Text</type>
</CustomField>