brain/sources/prod-metadata/objects/Account/fields/DS_ZIP_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>DS_ZIP_Postal_Code__c</fullName>
    <label>DS ZIP/Postal Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>