brain/sources/prod-metadata/objects/Account/fields/Email_replica__c.field-meta.xml
<CustomField>
    <fullName>Email_replica__c</fullName>
    <formula>PersonEmail</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email_replica</label>
    <type>Text</type>
</CustomField>