brain/sources/prod-metadata/objects/Account/fields/Employee_Referral__c.field-meta.xml
<CustomField>
    <fullName>Employee_Referral__c</fullName>
    <label>Employee Referral</label>
    <length>255</length>
    <type>Text</type>
</CustomField>