brain/sources/prod-metadata/objects/Account/fields/Expected_Interviews_Target__c.field-meta.xml
<CustomField>
    <fullName>Expected_Interviews_Target__c</fullName>
    <description>Niche-based expected interview target that accumulates monthly. First month = the niche&apos;s monthly target; each completed month since Application Start Date adds one more month&apos;s target. Niche monthly targets: AI/ML 12, Full Stack (Java) 8, Python 8, PM 6, Marketing 5, Finance Analyst 4. Other/blank niche or no start date = 0. Replaces the flat, niche-agnostic Expected_No_of_Interviews__c for Target Achieved reporting.</description>
    <formula>IF(
  ISBLANK(Application_Start_Date__c)
  || TEXT(Niche__c) = &quot;Other&quot;
  || ISBLANK(TEXT(Niche__c)),
  0,
  CASE(TEXT(Niche__c),
    &quot;AI ML Engineer&quot;,                     12,
    &quot;Product/Project Manager&quot;,             6,
    &quot;Java Fullstack Developer/Engineer&quot;,   8,
    &quot;Python Developer/Engineer&quot;,           8,
    &quot;Finance Analyst&quot;,                     4,
    &quot;Marketing Manager&quot;,                   5,
    0)
  * MAX(1,
      (YEAR(TODAY()) - YEAR(Application_Start_Date__c)) * 12
      + (MONTH(TODAY()) - MONTH(Application_Start_Date__c))
      - IF(DAY(TODAY()) &lt; DAY(Application_Start_Date__c), 1, 0)
      + 1)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expected Interviews (Target)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>