brain/sources/prod-metadata/objects/Account/fields/Expected_No_of_Interviews__c.field-meta.xml
<CustomField>
    <fullName>Expected_No_of_Interviews__c</fullName>
    <formula>IF(
  TODAY() -  Application_Start_Date__c  &lt;= 15,
  5,
  5 + CEILING((TODAY() -Application_Start_Date__c - 15) / 30) * 10
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expected No of Interviews</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>