brain/sources/prod-metadata/objects/Account/fields/Internal_Interview__c.field-meta.xml
<CustomField>
    <fullName>Internal_Interview__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Internal Interview</label>
    <referenceTo>Internal_Interview__c</referenceTo>
    <relationshipLabel>Candidates</relationshipLabel>
    <relationshipName>Candidates</relationshipName>
    <type>Lookup</type>
</CustomField>