brain/sources/prod-metadata/objects/Account/fields/Interview_Support__c.field-meta.xml
<CustomField>
    <fullName>Interview_Support__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Interview Support</label>
    <type>Checkbox</type>
</CustomField>