brain/sources/prod-metadata/objects/Account/fields/Interviews_Ghosted__c.field-meta.xml
<CustomField>
    <fullName>Interviews_Ghosted__c</fullName>
    <label>Interviews Ghosted</label>
    <summaryFilterItems>
        <field>Interview__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Interview</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Interview__c.Interview_Status__c</field>
        <operation>equals</operation>
        <value>Ghosted</value>
    </summaryFilterItems>
    <summaryForeignKey>Interview__c.Candidate__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>