brain/sources/prod-metadata/objects/Account/fields/Interviews_Rejected__c.field-meta.xml
<CustomField>
    <fullName>Interviews_Rejected__c</fullName>
    <label>Interviews Rejected</label>
    <summaryFilterItems>
        <field>Interview__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Interview</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Interview__c.Interview_Status__c</field>
        <operation>equals</operation>
        <value>Rejected</value>
    </summaryFilterItems>
    <summaryForeignKey>Interview__c.Candidate__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>