brain/sources/prod-metadata/objects/Account/fields/January_Kicker_Rate__c.field-meta.xml
<CustomField>
    <fullName>January_Kicker_Rate__c</fullName>
    <label>January Kicker Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>