brain/sources/prod-metadata/objects/Account/fields/Job_Seeking_Intensity__c.field-meta.xml
<CustomField>
    <fullName>Job_Seeking_Intensity__c</fullName>
    <label>Job Seeking Intensity</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>