brain/sources/prod-metadata/objects/Account/fields/Last_Alert_Sent__c.field-meta.xml
<CustomField>
    <fullName>Last_Alert_Sent__c</fullName>
    <label>Last Alert Sent</label>
    <type>Date</type>
</CustomField>