brain/sources/prod-metadata/objects/Account/fields/Latest_Internal_Interview_Date__c.field-meta.xml
<CustomField>
    <fullName>Latest_Internal_Interview_Date__c</fullName>
    <label>Latest Internal Interview Date</label>
    <type>DateTime</type>
</CustomField>