brain/sources/prod-metadata/objects/Account/fields/List_of_Certifications__c.field-meta.xml
<CustomField>
    <fullName>List_of_Certifications__c</fullName>
    <label>List of Certifications</label>
    <type>TextArea</type>
</CustomField>