brain/sources/prod-metadata/objects/Account/fields/Marketing_Email_Id__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Email_Id__c</fullName>
    <label>Marketing Email Id</label>
    <type>Email</type>
</CustomField>