brain/sources/prod-metadata/objects/Account/fields/Marketing_Email_Password__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Email_Password__c</fullName>
    <label>Marketing Email Password</label>
    <length>30</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>