brain/sources/prod-metadata/objects/Account/fields/Middle_Name__c.field-meta.xml
<CustomField>
    <fullName>Middle_Name__c</fullName>
    <label>Middle Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>