brain/sources/prod-metadata/objects/Account/fields/Military_Status__c.field-meta.xml
<CustomField>
    <fullName>Military_Status__c</fullName>
    <label>Military Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active Duty</fullName>
            </value>
            <value>
                <fullName>Reserve or National Guard</fullName>
            </value>
            <value>
                <fullName>Veteran</fullName>
            </value>
            <value>
                <fullName>Retired Military</fullName>
            </value>
            <value>
                <fullName>Military Spouse</fullName>
            </value>
            <value>
                <fullName>No Military Service</fullName>
            </value>
            <value>
                <fullName>Prefer not to say</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>